# SonarCloudTestRepo

./: .dockerignore  .editorconfig  .env  .env.development  .env.example  .env.prod  .env.production  .env.test  .env.test-env  .env.uat-env  .eslintignore  .eslintrc  .eslintrc.js  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.js  Dockerfile  Gemfile  HELP.md  Login.tsx  README.md  app.json  babel.config.js  build.gradle  checkstyle.xml  codegen.yml  docker-compose.yaml  docker-compose.yml  findbugs-exclude.xml  firebase.json  gradle.properties  graphql.schema.json  index.d.ts  jest.config.js  jest.config.ts  jest.setup.js  junit.xml  (+21 more)
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.husky/: pre-commit  task-runner.json
android/: build.gradle  settings.gradle
app/: build.gradle  debug.keystore  google-services.json  release.keystore
buildscripts/: jacoco.gradle
ci-scripts/: ci-current-version  ci-hotfix-version  ci-package-version  ci-prepare-chart  ci-release-version
databases/: AAI_PDW.sql  MAX_PDQ.sql  SALES_DATA.sql  products.es  search.es
docs/: best-practices.md  hooks.md  hotfixing.md
fastlane/: Appfile  Fastfile  Matchfile  Pluginfile  README.md  report.xml
ios/: GoogleService-Info.plist  Podfile
mocks/: svgrMock.tsx
nginx/: generate-env.sh
post/: README.md
public/: configuration.js  index.html  manifest.json  robots.txt  unsupported-browser.html
scripts/: gen-env.sh  init-dev.sh
src/: App.tsx  AuthProvider.mocks.ts  AuthProvider.test.tsx  AuthProvider.tsx  Routes.tsx  SitemapRoutes.tsx  _reece.scss  apolloClient.ts  client.test.ts  client.ts  config.js  context.ts  dataSources.ts  eclipse_load_count.js  global-types.d.ts  global.css  global.scss  i18n.tsx  i18nTestComponent.tsx  index.css  index.js  index.tsx  logger.js  mincron_load_count.js  polyfills.js  react-table-config.d.ts  resolvers.ts  selection.json  server.ts  session-id-manager.js  setup-tests.js  setupTests.ts  sitemap-generator.ts  tracing.ts  typeDefs.ts  typings.d.ts  utils.js
(+4037 files in other folders)
